--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
         with:
           name: Artifacts
           path: build/libs/
+      - name: WebHook
+        run: curl https://2b2t.asia:10000/generic-webhook-trigger/invoke?token=mirai-http-sdk --insecure
       - name: Get Short CommitID
         id: vars
         run: echo "SHORT_SHA=`git rev-parse --short HEAD`" >> $GITHUB_ENV
